<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_outline_notifications_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:title="@string/cart"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_account_circle_24"
        android:title="Profile"/>


</menu>