<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?actionBarSize"
    android:padding="10dp"
    tools:context=".presentation.ui.home.HomeFragment">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:iss_auto_cycle="true"
        app:iss_delay="0"
        app:iss_period="3000"
        app:iss_placeholder="@color/tosca"
        app:iss_error_image="@color/blue_blur"
        app:iss_corner_radius="20"
        android:layout_margin="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/collections"
            android:textColor="@color/tosca"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/blue_blur"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_collections"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="60dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bg_collection" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/imageView2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/collection_1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                android:contentDescription="@string/icon_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/t_shirts"
                android:textColor="@color/tosca"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="60dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bg_collection" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/collection_3"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                android:contentDescription="@string/icon_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/hoodies"
                android:textColor="@color/tosca"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="60dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bg_collection" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/collection_5"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                android:contentDescription="@string/icon_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/jacket"
                android:textColor="@color/tosca"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="60dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bg_collection" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/imageView9"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/collection_4"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8"
                android:contentDescription="@string/icon_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/shirts"
                android:textColor="@color/tosca"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="@+id/imageView9" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="60dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout4"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/bg_collection" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/imageView11"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/icon_collection"
                android:src="@drawable/collection_2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/bottoms"
                android:textColor="@color/tosca"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintStart_toStartOf="@+id/imageView11" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_Recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/recommendation_products"
            android:textColor="@color/tosca"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_show_all_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_all"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/blue_blur"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="5dp"
        android:id="@+id/rv_list_baju"
        android:layout_marginBottom="?actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/rv_item_klamby">

    </androidx.recyclerview.widget.RecyclerView>





</LinearLayout>