<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/arrow_back"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_share"
                android:contentDescription="@string/image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <ImageView
                android:id="@+id/iv_cart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/iv_share"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_like"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/iv_cart"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/product_details"
                android:textColor="@color/tosca"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_arrow_back"
                app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
                app:layout_constraintTop_toTopOf="@+id/iv_arrow_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="56dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baju_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_detail"
                tools:text="Zara - Jaket " />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="70dp"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image"
                android:src="@drawable/bg_home_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_title" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="Surakarta" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@+id/text_location"
                app:layout_constraintEnd_toStartOf="@+id/text_location"
                app:layout_constraintTop_toTopOf="@+id/text_location" />

            <TextView
                android:id="@+id/text_instock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                app:layout_constraintEnd_toEndOf="@+id/imageView14"
                app:layout_constraintStart_toStartOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="@+id/imageView14"
                tools:text="in Stock" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/color"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="Color" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/size"
                android:textColor="@color/gray"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                tools:text="Size" />

            <ImageView
                android:id="@+id/iv_color"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/image"
                android:src="@drawable/circle_blue_blur"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintStart_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="M" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/iv_color"
                app:layout_constraintTop_toBottomOf="@+id/iv_color" />

            <TextView
                android:id="@+id/description_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_font_family"
                android:paddingHorizontal="16dp"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="@+id/iv_color"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="this UI oooks interesting, clear and readable. However, I am wondering about the easiness to tap on some buttons that seem to be quite close to each other (sizes options for example). I suggest improving this by adding more space in between and increasing the button sizes. Especially if you have in mind people who are using phones like iphone 12 mini: lots of pixels but small screen for the size of their fingers. I actually am in this case" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_blur"
                app:layout_constraintTop_toBottomOf="@+id/description_detail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/similar_product"
                android:textColor="@color/tosca"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/view" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:textColor="@color/tosca"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Rp.5000" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:paddingHorizontal="16dp"
                android:paddingVertical="5dp"
                android:src="@drawable/bg_home_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="Checkout"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView15"
                app:layout_constraintEnd_toEndOf="@+id/imageView15"
                app:layout_constraintStart_toStartOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>